created array of buttons with mouseover listener on each

--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
             <div class="button operator" id="plus">+</div>
         </div>
     </div>
+    <script src="javascript.js"></script>
+
 </body>
 </html>
