--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 </head>
 <body>
     <div id="calc-body">
-        <div class="row" id="number-row"></div>
+        <div class="row" id="display">0</div>
         <div class="row">
-            <div class="button operator" id="c">C</div>
+            <div class="clear" id="c">C</div>
+            <div class="clear" id="ce">CE</div>
         </div>
         <div class="row">
-            <div class="button" id="7">7</div>
-            <div class="button" id="8">8</div>
-            <div class="button" id="9">9</div>
-            <div class="button operator" id="divide">/</div>
+            <div class="num" id="7">7</div>
+            <div class="num" id="8">8</div>
+            <div class="num" id="9">9</div>
+            <div class="operator" id="divide">/</div>
         </div>
         <div class="row">
-            <div class="button" id="4">4</div>
-            <div class="button" id="5">5</div>
-            <div class="button" id="6">6</div>
-            <div class="button operator" id="multiply">*</div>
+            <div class="num" id="4">4</div>
+            <div class="num" id="5">5</div>
+            <div class="num" id="6">6</div>
+            <div class="operator" id="multiply">*</div>
         </div>
         <div class="row">
-            <div class="button" id="1">1</div>
-            <div class="button" id="2">2</div>
-            <div class="button" id="3">3</div>
-            <div class="button operator" id="minus">-</div>
+            <div class="num" id="1">1</div>
+            <div class="num" id="2">2</div>
+            <div class="num" id="3">3</div>
+            <div class="operator" id="minus">-</div>
         </div>
         <div class="row">
-            <div class="button" id="0">0</div>
-            <div class="button" id="point">. </div>
-            <div class="button operator" id="equals">=</div>
-            <div class="button operator" id="plus">+</div>
+            <div class="num" id="0">0</div>
+            <div class="num" id="point">. </div>
+            <div class="operator" id="equals">=</div>
+            <div class="operator" id="plus">+</div>
         </div>
     </div>
     <script src="javascript.js"></script>
