--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="calc-body">
-        <div class="row" id="display">0</div>
+        <div class="row" id="display"></div>
         <div class="row">
             <div class="clear" id="c">C</div>
             <div class="clear" id="ce">CE</div>
